--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,7 +2,9 @@
   background-color: #fff;
   display: flex;
   justify-content: center;
-
+  font-size: 20px;
+  font-weight: 500;
+}
 
 .header__logo {
   margin: auto;
