--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -5,6 +5,8 @@
   margin: 0 auto;
   padding: 34px 0 20px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  line-height: 1;
 }
 
 .profile__avatar {
@@ -17,23 +19,48 @@
 .profile__column {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  font-weight: 500;
 }
 
 .profile__name {
   margin: 0 0 12px;
+  font-weight: 500;
+  font-size: 32px;
+  width: 420px;
+  height: 32px;
 }
 
 .profile__description {
   margin: 0 0 130px;
+  font-size: 16px;
+  width: 97px;
+  height: 16px;
+  color: rgba(21, 21, 21, 0.7);
 }
 
 .profile__edit-btn {
+  display: flex;
+  align-items: flex-start;
+  gap: 8px;
   margin-top: auto;
+  background-color: transparent;
+  width: auto;
+  height: 16px;
+  color: rgba(21, 21, 21, 0.7);
+  border: none;
+  padding: 0;
 }
 
 .profile__add-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
   margin-left: auto;
   margin-top: auto;
+  padding: 18px 32px;
+  border: none;
   background-color: #212121;
   color: #fcf5e5;
   width: 149px;
