--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,7 +3,7 @@
 }
 
 .card__image {
-  width: 413px;
+  width: 100%;
   height: 413px;
   object-fit: cover;
   display: block;
@@ -16,10 +16,42 @@
   justify-content: space-between;
 }
 
+.card__title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 350px;
+}
+
 .card__like-btn {
   width: 23px;
   height: 20px;
   border: none;
+  padding: 0;
   background-color: transparent;
   opacity: 40%;
+}
+
+@media screen and (max-width: 627px) {
+  .card__image {
+    height: 288px;
+  }
+
+  .card__content {
+    margin: 12px 0 20px;
+    height: 18px;
+  }
+
+  .card__title {
+    font-size: 16px;
+    height: 16px;
+  }
+
+  .card__like-btn {
+    width: 20px;
+    height: 18px;
+  }
 }
