--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -8,5 +8,13 @@
   margin: 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
+  justify-content: center;
   gap: 40px 20px;
+}
+
+@media screen and (max-width: 627px) {
+  .cards__list {
+    grid-template-columns: repeat(auto-fit, 288px);
+    gap: 0;
+  }
 }
