--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -5,6 +5,9 @@
 
 .footer__copyright {
   color: rgba(21, 21, 21, 0.7);
-  width: 104px;
+
   height: 16px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1;
 }
