--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,8 +1,6 @@
 .profile {
   display: flex;
-  max-width: 1280px;
   max-height: 210px;
-  margin: 0 auto;
   padding: 34px 0 20px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
   font-family: Poppins, Arial, Helvetica, sans-serif;
@@ -27,16 +25,27 @@
   margin: 0 0 12px;
   font-weight: 500;
   font-size: 32px;
-  width: 420px;
-  height: 32px;
+  max-width: 420px;
+  line-height: 1;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-clamp: 3;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__description {
-  margin: 0 0 130px;
+  margin: 0;
+  max-width: 420px;
   font-size: 16px;
-  width: 97px;
-  height: 16px;
   color: rgba(21, 21, 21, 0.7);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  line-clamp: 3;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .profile__edit-btn {
@@ -46,6 +55,7 @@
   margin-top: auto;
   background-color: transparent;
   width: auto;
+  font-size: 16px;
   height: 16px;
   color: rgba(21, 21, 21, 0.7);
   border: none;
@@ -59,11 +69,57 @@
   gap: 8px;
   margin-left: auto;
   margin-top: auto;
-  padding: 18px 32px;
   border: none;
+  font-size: 16px;
   background-color: #212121;
   color: #fcf5e5;
   width: 149px;
   height: 52px;
   border-radius: 8px;
+}
+
+@media screen and (max-width: 627px) {
+  .profile {
+    flex-direction: column;
+    max-width: 288px;
+    max-height: 346px;
+    align-items: center;
+    padding-top: 20px;
+  }
+
+  .profile__avatar {
+    margin-right: 0;
+    height: 80px;
+    width: 80px;
+  }
+
+  .profile__column {
+    max-width: 288px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .profile__name {
+    margin-top: 12px;
+    font-size: 20px;
+    max-width: 288px;
+    margin-bottom: 0;
+  }
+
+  .profile__description {
+    margin-top: 6px;
+    max-width: 288px;
+    /* height: 16px; */
+  }
+
+  .profile__edit-btn {
+    margin-top: 32px;
+  }
+
+  .profile__add-btn {
+    margin: 0;
+    width: 100%;
+    margin-top: 20px;
+    max-width: 288px;
+  }
 }
