--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -39,6 +39,7 @@
   margin: 0;
   max-width: 420px;
   font-size: 16px;
+  font-weight: 500;
   color: rgba(21, 21, 21, 0.7);
   text-overflow: ellipsis;
   overflow: hidden;
