--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,6 +14,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .card__title {
@@ -25,6 +27,9 @@
   white-space: nowrap;
   overflow: hidden;
   max-width: 350px;
+  color: #212121;
+  margin-top: 12px;
+  margin-bottom: 0;
 }
 
 .card__like-btn {
@@ -43,12 +48,11 @@
 
   .card__content {
     margin: 12px 0 20px;
-    height: 18px;
   }
 
   .card__title {
     font-size: 16px;
-    height: 16px;
+    line-height: 1;
   }
 
   .card__like-btn {
