--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,3 +1,10 @@
 .content {
-  padding: 0 20px;
+  padding: 0;
+}
+
+@media screen and (max-width: 627px) {
+  .content {
+    padding: 0;
+    margin: 16px 0;
+  }
 }
