--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,6 +1,5 @@
 .profile {
   display: flex;
-  max-height: 210px;
   padding: 34px 0 20px;
   border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
   font-family: Poppins, Arial, Helvetica, sans-serif;
@@ -25,6 +24,7 @@
   margin: 0 0 12px;
   font-weight: 500;
   font-size: 32px;
+  color: #212121;
   max-width: 420px;
   line-height: 1;
   text-overflow: ellipsis;
@@ -40,7 +40,7 @@
   max-width: 420px;
   font-size: 16px;
   font-weight: 500;
-  color: rgba(21, 21, 21, 0.7);
+  color: rgba(33, 33, 33, 0.7);
   text-overflow: ellipsis;
   overflow: hidden;
   line-clamp: 3;
@@ -58,9 +58,11 @@
   width: auto;
   font-size: 16px;
   height: 16px;
-  color: rgba(21, 21, 21, 0.7);
+  color: rgba(33, 33, 33, 0.7);
   border: none;
   padding: 0;
+  line-height: 1;
+  font-weight: 500;
 }
 
 .profile__add-btn {
@@ -77,6 +79,8 @@
   width: 149px;
   height: 52px;
   border-radius: 8px;
+  line-height: 1;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 627px) {
