--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,7 @@
 .cards {
-  padding-top: 20px;
+  padding: 20px 0 40px;
+
+  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
 }
 
 .cards__list {
@@ -15,6 +17,6 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
-    gap: 0;
+    gap: 12px 0 20px;
   }
 }
