--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -65,6 +65,11 @@
   font-weight: 500;
 }
 
+.profile__edit-btn:hover {
+  cursor: pointer;
+  opacity: 80%;
+}
+
 .profile__add-btn {
   display: flex;
   align-items: center;
@@ -81,6 +86,11 @@
   border-radius: 8px;
   line-height: 1;
   font-weight: 500;
+}
+
+.profile__add-btn:hover {
+  cursor: pointer;
+  opacity: 80%;
 }
 
 @media screen and (max-width: 627px) {
