--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,6 +17,6 @@
 @media screen and (max-width: 627px) {
   .cards__list {
     grid-template-columns: repeat(auto-fit, 288px);
-    gap: 12px 0 20px;
+    gap: 20px;
   }
 }
