--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -58,7 +58,8 @@
   width: auto;
   font-size: 16px;
   height: 16px;
-  color: rgba(33, 33, 33, 0.7);
+  opacity: 70%;
+  color: #212121;
   border: none;
   padding: 0;
   line-height: 1;
@@ -67,7 +68,7 @@
 
 .profile__edit-btn:hover {
   cursor: pointer;
-  opacity: 80%;
+  opacity: 100%;
 }
 
 .profile__add-btn {
