--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -28,8 +28,7 @@
 }
 
 .modal__close-btn {
-  background-image: url(../images/X.svg);
-  color: rgba(33, 33, 33, 0.4);
+  background-image: url(../images/hoverX.svg);
   background-color: transparent;
   position: absolute;
   top: 32px;
@@ -37,6 +36,12 @@
   width: 40px;
   height: 40px;
   border: transparent;
+  opacity: 40%;
+}
+
+.modal__close-btn:hover {
+  cursor: pointer;
+  opacity: 100%;
 }
 
 .modal__title {
@@ -60,7 +65,12 @@
 .modal__input {
   padding: 16px 12px;
   border-radius: 8px;
-  border-color: rgba(33, 33, 33, 0.4);
+  opacity: 40%;
+}
+
+.modal__input:hover {
+  cursor: pointer;
+  opacity: 100%;
 }
 
 .modal__submit-btn {
