--- a/blocks/card.css
+++ b/blocks/card.css
@@ -15,6 +15,7 @@
   border-radius: 8px;
   position: relative;
   z-index: 0;
+  cursor: pointer;
 }
 
 .card__trash-btn {
@@ -70,7 +71,7 @@
 }
 
 .card__like-btn_liked {
-  background: url(../images/heartLiked.svg) center no-repeat;
+  background: url(../images/HeartLiked.svg) center no-repeat;
   opacity: 1;
 }
 
@@ -90,6 +91,7 @@
 
   .card__title {
     font-size: 16px;
-    line-height: 1;
+    line-height: 1.5;
+    max-width: 260px;
   }
 }
