--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 12px;
+  padding: 20px;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0.5s, opacity 0.3s linear;
@@ -138,11 +138,21 @@
 
 @media screen and (max-width: 627px) {
   .modal {
-    padding: 89px 16px 88.43px;
+    padding: 0 10px;
+  }
+
+  .modal_type_preview {
     background-color: rgba(0, 0, 0, 0.8);
+    padding: 89px 16px 88.43px;
   }
 
   .modal__container {
+    width: 300px;
+    padding: 12px;
+  }
+
+  .modal__container_type_preview {
+    max-height: 604px;
     width: 288px;
   }
 
@@ -162,28 +172,45 @@
 
   .modal__title {
     font-size: 20px;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    line-height: 1;
     margin: 10px 0 34px;
   }
 
   .modal__close-btn {
+    top: 12px;
+    right: 12px;
+    padding: 0;
+  }
+
+  .modal__close-btn_type_preview {
     top: -47px;
     right: 0;
   }
 
-  .modal__container_type_preview {
-    max-height: 604px;
-  }
-
   .modal__label {
     margin-bottom: 24px;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    line-height: 17.6px;
   }
 
   .modal__input {
     color: rgba(33, 33, 33, 0.3);
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    line-height: 1;
   }
 
   .modal__submit-btn {
     max-width: 276px;
     width: 100%;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    line-height: 1;
   }
 }
