--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -120,6 +120,19 @@
   cursor: pointer;
   opacity: 100%;
 }
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
+.modal__error {
+  display: block;
+  color: rgba(255, 0, 0, 0.7);
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 17.6px;
+  margin-top: 8px;
+}
 
 .modal__submit-btn {
   max-width: 156px;
@@ -134,6 +147,15 @@
   border-radius: 8px;
   border: 0;
   cursor: pointer;
+}
+
+/* .modal__submit-btn:hover {
+  background-color: rgba(33, 33, 33, 0.8);
+} */
+
+.modal__submit-btn-disabled {
+  opacity: 50%;
+  background-color: rgba(33, 33, 33, 1);
 }
 
 @media screen and (max-width: 627px) {
