--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -109,7 +109,7 @@
 .modal__input {
   padding: 16px 12px;
   border-radius: 8px;
-  opacity: 40%;
+  border-color: rgba(33, 33, 33, 0.4);
   font-family: Poppins, Arial, Helvetica, sans-serif;
   font-size: 20px;
   line-height: 1;
@@ -118,8 +118,10 @@
 
 .modal__input:hover {
   cursor: pointer;
+  border-color: rgba(33, 33, 33, 1);
   opacity: 100%;
 }
+
 .modal__input_type_error {
   border: 1px solid rgba(255, 0, 0, 0.6);
 }
@@ -149,13 +151,12 @@
   cursor: pointer;
 }
 
-/* .modal__submit-btn:hover {
-  background-color: rgba(33, 33, 33, 0.8);
-} */
-
 .modal__submit-btn-disabled {
   opacity: 50%;
-  background-color: rgba(33, 33, 33, 1);
+}
+
+.modal__submit-btn:hover {
+  border-color: rgba(33, 33, 33, 0.8);
 }
 
 @media screen and (max-width: 627px) {
